persistent scratch buffer hack

--- a/emacs.org
+++ b/emacs.org
@@ -546,17 +546,28 @@ With prefix arg of 4 (e.g. C-u 4 M-x date), prompt for year/month for calendar d
   (jw--run-cmd "curl wttr.in" "weather"))
 
 (defun scratch-buffer ()
+  "My hacky way to back the scratch buffer by a file."
   (interactive)
-  (let ((scratch-buffer (get-buffer-create "*scratch*")))
-    (switch-to-buffer scratch-buffer)
-    (org-mode)))
-
-(defalias 'notepad 'scratch-buffer)
+  (let* ((bname "*scratch*")
+         (existing-buffer (get-buffer bname))
+         (filename (f-expand "scratch.org" user-emacs-directory)))
+    (when (and existing-buffer (not (buffer-file-name existing-buffer)))
+      (kill-buffer existing-buffer))
+    (if (get-buffer bname)
+        (switch-to-buffer bname)
+      (progn
+        (unless (f-exists? filename) (f-touch filename))
+        (find-file filename)
+        (rename-buffer bname)
+        (set-buffer-modified-p nil)
+        (cd (getenv "HOME"))))))
 
 (defun toggle-scratch-buffer ()
   (interactive)
   (if (string= (buffer-name) "*scratch*")
-      (switch-to-buffer (other-buffer))
+      (progn
+        (save-buffer)
+        (switch-to-buffer (other-buffer)))
     (scratch-buffer)))
 
 (defun ping-google ()
@@ -1641,6 +1652,7 @@ load the =private= directory and the =private.org= file if they exist
 * finally
 
 #+BEGIN_SRC emacs-lisp
+(scratch-buffer)
 (cd (getenv "HOME"))
 (fullscreen)
 (server-start)
